--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@types/react": "^19.0.10",
     "@types/react-native": "^0.73.0",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@react-native-community/netinfo": "^11.4.1"
   }
 }
