--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "prepare": "husky install"  
   },
   "keywords": [
     "react-native",
@@ -21,12 +22,14 @@
     "react": "*",
     "react-native": "*"
   },
+  
   "devDependencies": {
     "@types/react": "^19.0.10",
     "@types/react-native": "^0.73.0",
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "^11.4.1"
+    "@react-native-community/netinfo": "^11.4.1",
+    "husky": "^9.1.7"
   }
 }
