--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "A React Native package to get network information and display it in a user-friendly way.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "import": "./dist/index.js",
+    "require": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "yarn build",
-    "prepare": "husky install"  
+    "prepare": "husky install",
+    "test": "jest"
   },
   "keywords": [
     "react-native",
@@ -16,20 +21,39 @@
     "networkInfo",
     "netInfo"
   ],
-  "author": "Your Name",
+  "author": "Abdulmalik Alshugaa",
   "license": "MIT",
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react": ">=17.0.0",
+    "react-native": ">=0.64.0"
   },
-  
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-native": "^0.73.0",
-    "typescript": "^5.7.3"
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "ts-jest": "^29.2.6",
+    "typescript": "^5.7.3",
+    "react": "^19.0.0",
+    "react-native": "^0.74.0"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.26.9",
     "@react-native-community/netinfo": "^11.4.1",
     "husky": "^9.1.7"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    }
   }
 }
