--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "lib": ["esnext"],
     "declaration": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["react", "react-native","jest"],
   },
   "include": ["src"]
 }
