--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Abdulmalik Alshugaa",
   "license": "MIT",
   "peerDependencies": {
+    "@react-native-community/netinfo": ">=11.4.1",
     "react": ">=17.0.0",
     "react-native": ">=0.64.0"
   },
@@ -31,23 +32,25 @@
     "@babel/plugin-transform-runtime": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-native": "^0.73.0",
+    "add": "^2.0.6",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "react": "^19.0.0",
+    "react-native": "^0.74.0",
     "ts-jest": "^29.2.6",
     "typescript": "^5.7.3",
-    "react": "^19.0.0",
-    "react-native": "^0.74.0"
+    "yarn": "^1.22.22"
   },
   "dependencies": {
     "@babel/preset-env": "^7.26.9",
-    "@react-native-community/netinfo": "^11.4.1",
     "husky": "^9.1.7"
   },
   "jest": {
